src/components/Modal/Modal.module.scss
body.active-modal {
  overflow-y: hidden;
}

.modal, .overlay {
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  position: fixed;
}

.overlay {
  background: rgba(49,49,49,0.8);
}

@keyframes popOpenTransition {
  from {
    transform: translate(-50%, -50%) scale(0);
  } to {
    transform: translate(-50%, -50%) scale(1);
  }
}

.modal_content {
  position: absolute;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);
  line-height: 1.4;
  background: #f1f1f1;
  padding: 14px 28px;
  border-radius: 3px;
  max-width: 600px;
  min-width: 230px;
  //min-width: 300px;

  max-height: 65vh;
  overflow: hidden;
  overflow-y: scroll;

  //margin: auto, 8px;
  //border: 1px solid red;

  text-align: left;

  animation-name: popOpenTransition;
  animation-duration: 300ms;
  animation-timing-function: ease-in-out;

  // -ms-overflow-style: none;
  // scrollbar-width: none;

  & * {
    padding: 4px 0px;
  }

  // &::-webkit-scrollbar {
  //   display: none;
  // }
}

.close_modal {
  position: absolute;
  top: 10px;
  right: 10px;
  padding: 5px 7px;
  height: 30px;
}

.space_between {
  display: flex;
  justify-content: space-between;
}

// @media screen and (max-width: 350px) {
//   .modal_content {
//     width: 300px;
//   }

  
// }

// .showing .modal_content {
//   transition: all 300ms ease-in-out;
//   transform: translate(-50%, -50%) scale(1);
// }

